--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,17 @@
     margin: 0;
 }
 
+:root {
+    --colorletras: #ba9a91;
+    --colorletras2: #7e4333;
+    --tipografiapricipal: DM Serif Display;
+    --tipografiasecunadaria: font-family: DM Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+}
+
 #body {
     background-color: #f3e5d8;
 }
@@ -14,19 +25,27 @@
     margin: 20px;
     border-radius: 8px;
     padding: 10px;
+    height: 60px;
 }
 
 .logo {
     color: white;
-    font-family: "Ubuntu", sans-serif;
+    font-family: DM Serif Display;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32.9px;
+    text-align: left;    
     font-style: italic;
 }
 
 #ul-nav {
     display: flex;
     color: white;
-    font-family: "Ubuntu", sans-serif;
-    font-style: italic;
+    font-family: DM Serif Display;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 32.9px;
+    text-align: left;
     list-style: none;
     justify-content: center;
     align-items: stretch;
@@ -35,6 +54,12 @@
 .navegador {
     display: inline-block;
     text-decoration: none;
+}
+
+.navegador-image {
+    display: inline-block;
+    text-decoration: none;
+    margin-top: 5px;
 }
 
 .nav {
@@ -71,7 +96,7 @@ h1 {
     color: white;
     border-radius: 10px;
     padding-top: 75px;
-
+    font-family: var(--tipografiapricipal);
 }
 
 #grid-container {
@@ -91,7 +116,13 @@ h1 {
     }
 }
 
+h5 {
+    font-family: var(--tipografiapricipal);
+}
 
+p {
+    font-family: var(--tipografiasecunadaria);
+}
 
 #receta1 {
     grid-area: 1/2/2/3;
@@ -263,6 +294,7 @@ h1 {
 
 .btn-primary {
     background-color: #255538;
+    border: 1px solid  #255538;
 }
 
 #footer {
@@ -270,17 +302,19 @@ h1 {
     justify-content: space-between;
     background-color: #255538;
     color: white;
-    font-family: "Ubuntu", sans-serif;
+    font-family: var(--tipografiapricipal);
     font-style: italic;
-    margin: 20px 20px 0px 20px;
+    margin: 30px 20px 0px 20px;
     border-radius: 8px;
     padding: 20px;
 }
 
 .pagina-principal {
     color: white;
-    font-family: "Ubuntu", sans-serif;
-    font-style: italic;
+    font-family: DM Serif Display;
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32.9px;
+    text-align: left;
     text-decoration: none;
-    font-size: 20px;
 }
