--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     --colorletras: #ba9a91;
     --colorletras2: #7e4333;
     --tipografiapricipal: DM Serif Display;
-    --tipografiasecunadaria: font-family: DM Sans;
+    --tipografiasecunadaria: DM Sans;
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
