--- a/css/style3.css
+++ b/css/style3.css
@@ -3,9 +3,94 @@
     margin: 0;
 }
 
-form {
-    display: grid;
+main {
+  display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 10em 1em 1em 1em;
+  grid-template-columns: 10% 80% 10%;
+  grid-template-rows: auto;
+  justify-content: center;
+}
+
+.title-form {
+  margin-bottom: 30px;
+  font-size: 40px;
+  color: #7e4333;
+}
+
+.parrafo {
+  font-family: DM, sans-serif;
+  text-align: justify;
+}
+
+#main-container {
+  grid-area: 1/2/2/3;
+  background-color: white;
+  border-radius: 5px;
+  padding: 20px;
+}
+
+form {
+  margin-top: 30px;
+}
+
+label {
+  color: #7e4333;
+  font-size: 24px;
+  font-family: DM Serif Display;
+}
+
+#nombre-de-la-receta {
+  flex-direction: column;
+  border-radius: 5px;
+  width: 100%;
+  border: none;
+  background-color: #dfdfdf;
+  height: 30px;
+  margin: 10px 0px 20px 0px;
+}
+
+#tiempo-de-la-receta {
+  flex-direction: column;
+  border-radius: 5px;
+  width: 100%;
+  border: none;
+  background-color: #dfdfdf;
+  height: 30px;
+  margin: 10px 0px 20px 0px;
+}
+
+#Ingredientes {
+  flex-direction: column;
+  border-radius: 5px;
+  width: 100%;
+  border: none;
+  background-color: #dfdfdf;
+  height: 200px;
+  margin: 10px 0px 20px 0px;
+}
+
+#Instrucciones {
+  flex-direction: column;
+  border-radius: 5px;
+  width: 100%;
+  border: none;
+  background-color: #dfdfdf;
+  height: 200px;
+  margin: 10px 0px 20px 0px;
+}
+
+button {
+  border-radius: 5px;
+  background-color: #255538;
+  color: white;
+  font-family: DM, sans-serif;
+  border: none;
+  width: 90px;
+  height: 30px;
+  margin-top: 20px;
+  transition: background-color 0.3s ease-in-out;
+}
+
+button:hover {
+  background-color: #0d99ff;
 }
